fix spacing

--- a/all.css
+++ b/all.css
@@ -14,16 +14,18 @@ span {
 .letter_input {
     background-color: #2c2f35 !important;
     margin: 5px;
-    height: 50px;
-    width: 50px;
+    width: 10%;
+    height: auto;
     font-size: 45px;
     text-align: center;
     color: white;
     text-transform:uppercase;
+    display: flex;
 }
 
 .row {
     display: flex;
+    width: auto;
 }
 
 .current input.letter_input{
